# scl

./: .gitignore  .gitmodules  README.txt
applications-linux/: README.txt  create_new_ctrl.sh
applications-linux/bfr_system_id/: CMakeLists.txt  beej_server.cpp  bfr_force_id_main_nw.cpp  bfr_force_id_main_nw_driver2.cpp  bfr_system_id_main.cpp  bfr_system_id_main_nw.cpp  make_dbg.sh  make_rel.sh  make_serv.sh
applications-linux/fmri_cylinder/: fmri_cylinder_main.cpp
applications-linux/fmri_force_sensing/: CMakeLists.txt  README.txt  fmri_force_sensing_main.cpp  make_dbg.sh  make_rel.sh
applications-linux/fmri_force_sensing/stim/: SetupVisionForceStim.m
applications-linux/fmri_xyz_localizer/: CFmriXYZLocalizerApp.cpp  CFmriXYZLocalizerApp.hpp  CMakeLists.txt  FmriCfg.xml  README.txt  fmri_xyz_localizer_main.cpp  make_dbg.sh  make_rel.sh  task.txt
applications-linux/fmri_xyz_localizer/graphics/: peacockgreen.mtl  sunyellow.mtl
applications-linux/fmri_xyz_localizer/stim/: 2012-11-04-SM-scan-1.txt  2012-11-04-SM-scan-2.txt  2012-11-04-SM-scan-3.txt  2012-11-04-SM-scan-4.txt  2012-11-04-SM-scan-5.txt  2012-11-13-Dummy-SM-scan-2.txt  2012-11-13-Dummy-SM-scan-4.txt  2012-11-13-Dummy-SM-scan-5.txt  2012-11-13-Dummy-SM-scan-8.txt  2012-11-19-GB-8dir-fast-scan-1.txt  2012-11-19-GB-8dir-fast-scan-2.txt  2012-11-19-GB-8dir-fast-scan-3.txt  2012-11-19-GB-8dir-fast-scan-4.txt  2012-11-19-GB-8dir-fast-scan-5.txt  2012-11-19-GB-8dir-fast-scan-6.txt  2012-11-19-GB-8dir-fast-scan-7.txt  2012-11-19-GB-8dir-fast-scan-8.txt  2012-11-19-GB-8dir-fast-scan-9.txt  2012-11-19-GB-8dir-scan-1.txt  2012-11-19-GB-8dir-scan-4.txt  2012-11-19-GB-8dir-scan-5.txt  2012-11-19-GB-8dir-scan-7.txt  2012-11-20-GB-14dir-2plane-nullplan-6.txt  SetupHapticStim.m  SetupHapticStimV101_RandPosForce.m  SetupHapticStimV2RndPlan.m  SetupHapticStimV3_8goal.m  SetupHapticStimV4_16goal_2PlaneRot.m
applications-linux/fmri_xyz_localizer/stim/2012-11-04-V1/: 2012-11-04-SM-scan-2.txt
applications-linux/fmri_xyz_localizer/stim/2012-11-13-Dummy/: 2012-11-13-Dummy-SM-scan-1.txt  2012-11-13-Dummy-SM-scan-3.txt  2012-11-13-Dummy-SM-scan-6.txt  2012-11-13-Dummy-SM-scan-7.txt
applications-linux/fmri_xyz_localizer/stim/2012-11-19-8dir/: 2012-11-19-GB-8dir-fast-scan-1.txt  2012-11-19-GB-8dir-fast-scan-2.txt  2012-11-19-GB-8dir-fast-scan-3.txt  2012-11-19-GB-8dir-fast-scan-4.txt  2012-11-19-GB-8dir-fast-scan-7.txt  2012-11-19-GB-8dir-fast-scan-8.txt  2012-11-19-GB-8dir-scan-2.txt  2012-11-19-GB-8dir-scan-3.txt  2012-11-19-GB-8dir-scan-6.txt  2012-11-19-GB-8dir-scan-8.txt
applications-linux/fmri_xyz_localizer/stim/2012-11-20-14dir-2plane-nullplan/: 2012-11-20-GB-14dir-2plane-nullplan-7.txt  2012-11-20-GB-14dir-2plane-nullplan-mock.txt
applications-linux/fmri_xyz_localizer/stim/2012-11-20-14dir-2plane-nullplan-Error_in_task_conditions/: 2012-11-20-GB-14dir-2plane-nullplan-1.txt  2012-11-20-GB-14dir-2plane-nullplan-2.txt  2012-11-20-GB-14dir-2plane-nullplan-3.txt  2012-11-20-GB-14dir-2plane-nullplan-4.txt  2012-11-20-GB-14dir-2plane-nullplan-5.txt  2012-11-20-GB-14dir-2plane-nullplan-8.txt
applications-linux/fmri_xyz_localizer/stim/2012-11-24-14dir-2plane-nullplan/: 2012-11-24-14dir-2plane-nullplan-1.txt  2012-11-24-14dir-2plane-nullplan-2.txt  2012-11-24-14dir-2plane-nullplan-3.txt  2012-11-24-14dir-2plane-nullplan-4.txt  2012-11-24-14dir-2plane-nullplan-5.txt  2012-11-24-14dir-2plane-nullplan-6.txt  2012-11-24-14dir-2plane-nullplan-7.txt  2012-11-24-14dir-2plane-nullplan-8.txt  2012-11-24-14dir-2plane-nullplan-mock.txt
applications-linux/fmri_xyz_localizer/stim/2012-11-24-ForceProve4x3/: 2012-11-24-SM-ForceProbe4x3-7.txt  2012-11-24-SM-ForceProbe4x3-8.txt  2012-11-24-SM-ForceProbe4x3-mock.txt
applications-linux/fmri_xyz_localizer/stim/2012-11-24-ForceProve4x3-Error_in_task_conditions/: 2012-11-24-SM-ForceProbe4x3-3.txt  2012-11-24-SM-ForceProbe4x3-5.txt  2012-11-24-SM-ForceProbe4x3-6.txt
applications-linux/fmri_xyz_localizer/stim/2012-11-24-ForceProve4x3-InProgress/: 2012-11-24-SM-ForceProbe4x3-1.txt  2012-11-24-SM-ForceProbe4x3-2.txt  2012-11-24-SM-ForceProbe4x3-4.txt
applications-linux/scl_2rob_task_ctrl/: 2rob_task_main.cpp  CMakeLists.txt  CScl2RobAppTask.hpp  Makefile  Pr2BCfg.xml  make_dbg.sh  make_rel.sh  run_2_models.sh
applications-linux/scl_RParRR_ctrl/: CMakeLists.txt  RParRRDualHandle_main.cpp  RParRRDual_main.cpp  RParRR_main.cpp
applications-linux/scl_dynamics/: CMakeLists.txt  Makefile  README.txt  make_dbg.sh  make_rel.sh  scl_dynamics.cpp
applications-linux/scl_dynamics_dyn3d/: CMakeLists.txt  README.txt  make_dbg.sh  make_rel.sh  scl_dynamics_dyn3d.cpp
applications-linux/scl_dynamics_spatial/: CMakeLists.txt  RRRRCfg.xml  scl_dynamics_spatial.cpp
applications-linux/scl_example_ctrl/: CExampleApp.cpp  CExampleApp.hpp  CExampleTask.cpp  CExampleTask.hpp  CMakeLists.txt  ExampleCallbacks.hpp  PumaCfg.xml  make_dbg.sh  make_rel.sh  scl_example_main.cpp
applications-linux/scl_file_converter/: Makefile  scl_file_converter.cpp
applications-linux/scl_gc_ctrl/: CMakeLists.txt  Makefile  gc_main.cpp  make_dbg.sh  make_rel.sh  run_all.sh
applications-linux/scl_graphics/: CMakeLists.txt  SceneCfg.xml  make_dbg.sh  make_rel.sh  scl_graphics_main.cpp  scl_graphics_mod_main.cpp
applications-linux/scl_haptic_ctrl/: CExampleApp.cpp  CExampleTask.cpp  CExampleTask.hpp  CHapticApp.cpp  CHapticApp.hpp  CMakeLists.txt  ChaiHapticWrapper.cpp  ChaiHapticWrapper.hpp  HapticCallbacks.hpp  SExampleTask.hpp  make_dbg.sh  make_rel.sh  scl_haptic_main.cpp
applications-linux/scl_lib/: CMakeLists.txt  README.txt  make_apps.sh  make_debug.sh  make_everything.sh  make_libs.sh  make_release.sh
applications-linux/scl_muscle_gc_ctrl/: CMakeLists.txt  (+2 more)
applications-linux/scl_redis_ctrl/: CMakeLists.txt  CSclRedisTask.hpp  make_dbg.sh  make_rel.sh  redis_main.cpp  scl_redis_ctrl_main.cpp
applications-linux/scl_redis_sim/: CMakeLists.txt  scl_redis_sim.cpp
doc/: MathTutorial_01_RPPBot.nb  MathTutorial_02_R6Bot.nb  Tutorial_02_Controller.txt  genCodeJson.py
specs/: README.txt
tutorial/: make_tutorials.sh
(+628 files in other folders)
